--- a/Anime_Catalogue_Api/appsettings.json
+++ b/Anime_Catalogue_Api/appsettings.json
@@ -3,8 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AnimeCatelogueDB": "Server=HP-PMQ-360\\MSSQLSERVERATTY;DataBase=Anime_Catalogue_DB;Integrated Security=true;"
+  }
 }
